# starter_project_cpp

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  main.cpp
cmake/: CompilerOptions.cmake
include/Foo/: Foo.h  Foo.hh  Foo.hpp  Foo.hxx  IFoo.hpp
src/: main.cpp
src/Foo/: Foo.cc  Foo.cpp  Foo.cxx  Foo.mm
test/: CMakeLists.txt  Module.cpp
test/Foo/: TestFoo.cpp
